test/good/functions/nested04.px

func f() def
    x = 5

    func g() def
        print x

    g()

f()
