test/bad/functions/void01.px

func f(): Void def
    return

x = f()
